// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test custom class 1`] = `
<p
  className="Pinpoint Content Card Description test-custom"
>
  Short and Sweet
</p>
`;

exports[`Test empty state 1`] = `
<p
  className="Pinpoint Content Card Description "
>
  
</p>
`;

exports[`Test long description 1`] = `
<p
  className="Pinpoint Content Card Description "
>
  This is description copied from the title and you would never really want this but I guess we'll show it here anyways just for you
</p>
`;

exports[`Test short description 1`] = `
<p
  className="Pinpoint Content Card Description "
>
  Short and Sweet
</p>
`;
